force-app/main/default/objects/MJS_StubData__mdt/MJS_StubData__mdt.object-meta.xml
<CustomObject>
    <description>Use this class to return configurable data using Salesforce&apos;s StubProvider interface.</description>
    <label>Stub Data</label>
    <pluralLabel>Stub Data</pluralLabel>
</CustomObject>