force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_ListOfArgs__c.field-meta.xml
<CustomField>
    <fullName>MJS_ListOfArgs__c</fullName>
    <description>Matches the listOfArgs parameter of the handleMethodCall method.</description>
    <label>List Of Args</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>