force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_ListOfParamNames__c.field-meta.xml
<CustomField>
    <fullName>MJS_ListOfParamNames__c</fullName>
    <description>Matches the listOfParamNames parameter of the handleMethodCall method.</description>
    <label>List Of Param Names</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>