force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_ListOfParamTypes__c.field-meta.xml
<CustomField>
    <fullName>MJS_ListOfParamTypes__c</fullName>
    <description>Matches the listOfParamTypes parameter of the handleMethodCall method.</description>
    <label>List Of Param Types</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>