force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_ReturnType__c.field-meta.xml
<CustomField>
    <fullName>MJS_ReturnType__c</fullName>
    <description>Matches the returnType parameter of the handleMethodCall method.</description>
    <label>Return Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>