force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_StubbedMethodName__c.field-meta.xml
<CustomField>
    <fullName>MJS_StubbedMethodName__c</fullName>
    <description>Matches the stubbedMethodName parameter of the handleMethodCall method.</description>
    <label>Stubbed Method Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>