force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_StubbedObject__c.field-meta.xml
<CustomField>
    <fullName>MJS_StubbedObject__c</fullName>
    <description>Matches the stubbedObject parameter of the handleMethodCall method.</description>
    <label>Stubbed Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>