force-app/main/default/objects/MJS_StubData__mdt/fields/MJS_Value__c.field-meta.xml
<CustomField>
    <fullName>MJS_Value__c</fullName>
    <description>The returned data is in JSON format.</description>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>